# distribuidora

./: ICONS.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_add_users_table.sql  003_add_product_expiry.sql
src-tauri/src/: auth.rs  errors.rs  guards.rs  main.rs  models.rs  test_helpers.rs
src-tauri/src/commands/: customers.rs  dashboard.rs  mod.rs  orders.rs  products.rs  receipts.rs  stock.rs  users.rs
src-tauri/src/db/: customers.rs  init.rs  mod.rs  orders.rs  products.rs  stock.rs  users.rs
src/api/: customers.ts  dashboard.ts  orders.ts  products.ts  receipts.ts  stock.ts  users.ts
src/components/: Cart.tsx  Layout.tsx  ProductCard.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
src/components/__tests__/: ProductCard.test.tsx  ProtectedRoute.test.tsx
src/components/ui/: alert-dialog.tsx
src/lib/__tests__/: utils.test.ts
src/pages/: Customers.tsx  Dashboard.tsx  Login.tsx  Orders.tsx  POS.tsx  Products.tsx  Settings.tsx  Stock.tsx  Users.tsx
src/state/: authStore.ts  cartStore.ts  customersStore.ts  dashboardStore.ts  productsStore.ts
src/state/__tests__/: authStore.test.ts  cartStore.test.ts
src/test/: setup.ts
